  * Update installed files.
  * Add build dependency on libakonadi-dev.
  * Add build dependency on libknotificationitem-1-dev.
  * Add myself to uploaders.
  * Update some lintian overrides.

  +++ Changes by Martin Alfke:

  * Split of kdebase-workspace-libs4+5 into individiual library packages.
    - Remove kdebase-workspace-libs4+5.
    - Add Conflicts to all new split libraries.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 30 Jun 2009 13:03:25 +0300

kdebase-workspace (4:4.2.4-1) unstable; urgency=low

  * New upstream release:
    - keyboard.desktop renamed to kcm_keyboard.desktop to avoid
      conflict with gnome's keyboard.desktop. (Closes: #524506)
    - plasma don't freezes when unmounting busy devices 
      (Closes: #530558, #523089)

  +++ Changes by Josh Metzler:

  * Fix grep for checking if Desktop Themes should be used. (Closes: #530493)

  +++ Changes by George Kiagiadakis:

  * Move the .desktop files of kcm_fonts, kcm_style and kcm_colors
    to the systemsettings package, so that these kcms can actually
    work without kdebase-workspace-bin.

  +++ Changes by Fathi Boudra:

  * Bump Standards-Version from 3.8.0 to 3.8.1 (no changes needed).
  * Update installed files: add kcm_keyboard.desktop in kdebase-workspace-bin.

  +++ Changes by Martin Alfke:

  * New package for kgreet-plugins (Closes: #520426)
    - Create new package with name kdebase-workspace-kgreet-plugins.
    - Move /usr/lib/kde4/kgreet_*.so from kdebase-workspace-bin to
      new package.
    - Add dependency to kdm and kdebase-workspace-bin on
      kdebase-workspace-kgreet-plugins (= ${binary:Version})
    - kdebase-workspace-kgreet-plugins replaces kdebase-workspace-bin
      (<4:4.2.3-1)

  +++ Changes by Armin Berres:

  * Call update-alternatives without absolute path.
  * If readable, source /etc/default/locale in KDM's init script to make it
    aware of the user's locale. (Closes: #528937)
